#This file is part of mpunittest, a parallel unittest runner.
#Copyright (C) 2023 Maximilian Pilz
#
#This program is free software; you can redistribute it and/or
#modify it under the terms of the GNU General Public License
#as published by the Free Software Foundation; version 2.
#
#This program is distributed in the hope that it will be useful,
#but WITHOUT ANY WARRANTY; without even the implied warranty of
#MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#GNU General Public License for more details.
#
#You should have received a copy of the GNU General Public License
#along with this program; if not, write to the Free Software
#Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "mpunittest"
description = "Multi core processing of unittests"
readme = "README.rst"
requires-python = ">=3.8"
license = {text = "GPL-2.0-only"}
keywords = ["unittest", "unittests", "parallel", "multiprocessing", "process", "processes", "runner"]
authors = [
  {email = "maximilian.pilz.git@gmail.com"},
  {name = "Maximilian Pilz"}
]
maintainers = [
  {name = "Maximilian Pilz", email = "maximilian.pilz.git@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Unit",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
]
dynamic = ["version"]

[tool.hatch.build.targets.sdist]
include = [
    "src/mpunittest/**/*.py",
    "src/mpunittest/**/*.html",
    "COPYING",
    "README.rst",
    "pyproject.toml"
]
support-legacy = false

[tool.hatch.build.targets.wheel]
packages = ["src/mpunittest"]

[tool.hatch.version]
path = "src/mpunittest/__init__.py"

[project.urls]
repository = "https://github.com/maximilianpilz/mpunittest.git"
